<resources>
    <string name="app_name">nuWallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_wallets">Wallets</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_about_app">About</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_transactions">Transactions</string>
    <string name="menu_send">Send</string>
    <string name="menu_receive">Receive</string>

    <string name="menu_filter">Filter Transactions</string>

    <string name="menu_scan_qr">Scan QR Code</string>

    <string name="title_extra">Extra</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_send">Send</string>
    <string name="title_receive">Receive</string>

    <string name="action_settings">Settings</string>

    <string name="status_in_progress">In Progress</string>
    <string name="status_error">Error</string>

    <string name="header_pay_to">Pay To:</string>
    <string name="header_amount">Amount:</string>
    <string name="header_address">Address:</string>

    <string name="hint_address">Address</string>
    <string name="hint_amount">0</string>

    <string name="button_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
